# Python_101

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
basics/: cargar_lista.py  ciclo_for.py  notas.py  palindromo.py  password_gen.py  to_do_cli.py
chile/: correo.py  valida_rut.py
data/: api_weather.py  dic_a_dataframe.py  test_json_df.py  turtle_spiral.py
games/: casino-montecarlo.py  ruleta_rusa.py
gui/: tkinter001.py
math/: fibonacci.py  matrices.py  ordenamiento_vectores.py  primos.py
stats/: promedios.py
tests/: test_smoke.py
